# SimuRLacra

./: .gitignore  Dockerfile  LICENSE.md  README.md  build_docs.sh  setup_deps.py  setup_docker.sh  setup_env.sh
.github/workflows/: dockerimage.yml  dockerimage_py38.yml  publish_docker_hub.yml
Pyrado/: activate_pyrado.sh  environment.yml  setup.py
Pyrado/doc/source/: conf.py  index.rst
Pyrado/examples/: basic_walkthrough.py
Pyrado/pyrado/: __init__.py
Pyrado/pyrado/algorithms/: a2c.py  actor_critic.py  adr.py  adr_discriminator.py  advantage.py  arpl.py  base.py  bayrn.py  cem.py  dql.py  emvd.py  epopt.py  hc.py  lin_ctrl.py  nes.py  parameter_exploring.py  pepg.py  power.py  ppo.py  reps.py  sac.py  simopt.py  spota.py  spota_parallel.py  svpg.py  torchdist_utils.py  torchdistributions.py  utils.py
Pyrado/pyrado/domain_randomization/: default_randomizers.py  domain_parameter.py  domain_randomizer.py  utils.py
Pyrado/pyrado/environment_wrappers/: action_delay.py  action_noise.py  action_normalization.py  adversarial.py  base.py  domain_randomization.py  downsampling.py  observation_noise.py  observation_normalization.py  observation_partial.py  state_augmentation.py  utils.py
Pyrado/pyrado/environments/: base.py  sim_base.py
Pyrado/pyrado/exploration/: normal_noise.py  stochastic_action.py  stochastic_params.py  uniform_noise.py
Pyrado/pyrado/logger/: __init__.py  experiment.py  iteration.py  step.py
Pyrado/pyrado/plotting/: __init__.py  categorial.py  curve.py  distribution.py  gaussian_process.py  heatmap.py  live_update.py  policy_parameters.py  rollout_based.py  surface.py  utils.py
Pyrado/pyrado/policies/: adn.py  base.py  base_recurrent.py  dummy.py  features.py  (+9 more)
Pyrado/tests/: conftest.py  test_algorithm_utils.py  test_algorithms.py  test_domain_randomization.py  test_environments.py  test_exploration.py  test_logger.py  test_plotting.py  test_policies.py  test_rollout_result.py  test_sampling.py  test_spaces.py  test_step_logger.py  test_tasks.py  test_tensor_utils.py  test_utils.py
RcsPySim/: CLionStyle.xml  CMakeLists.txt  setup.py  unittest.sh
RcsPySim/doc/: CMakeLists.txt
RcsPySim/src/cpp/core/: CMakeLists.txt  DataLogger.cpp  DataLogger.h  ECBallInTube.cpp  ECBallOnPlate.cpp  ECBoxFlipping.cpp  ECBoxLifting.cpp  ECBoxLiftingSimple.cpp  ECBoxShelving.cpp  ECMPBlending.cpp  ECPlanar3Link.cpp  ECPlanarBoxFiddle.cpp  ECPlanarInsert.cpp  ECQuanserQube.cpp  ECTargetTracking.cpp  ExperimentConfig.cpp  ExperimentConfig.h  RcsPyBot.cpp  RcsPyBot.h  RcsSimEnv.cpp  RcsSimEnv.h
RcsPySim/src/cpp/core/action/: AMIntegrate1stOrder.cpp  AMIntegrate1stOrder.h  AMIntegrate2ndOrder.cpp  AMIntegrate2ndOrder.h  AMJointControl.cpp  AMJointControl.h  AMJointControlAcceleration.cpp  AMJointControlAcceleration.h  AMJointControlPosition.cpp  AMJointControlPosition.h  AMNormalized.cpp  AMNormalized.h  AMPlateAngPos.cpp  AMPlateAngPos.h  AMPlatePos5D.cpp  AMPlatePos5D.h  AMTaskActivation.cpp  AMTaskActivation.h  ActionModel.cpp  ActionModel.h  ActionModelIK.cpp  ActionModelIK.h  DynamicalSystem.cpp  DynamicalSystem.h
RcsPySim/src/cpp/core/config/: PropertySink.h  PropertySource.cpp  PropertySource.h  PropertySourceXml.cpp  PropertySourceXml.h
RcsPySim/src/cpp/core/control/: ControlPolicy.cpp  ControlPolicy.h  MLPPolicy.cpp  MLPPolicy.h  TorchPolicy.cpp  TorchPolicy.h
RcsPySim/src/cpp/core/initState/: ISSBallInTube.cpp  ISSBallInTube.h  ISSBallOnPlate.cpp  ISSBallOnPlate.h  ISSBoxFlipping.cpp  ISSBoxFlipping.h  ISSBoxLifting.cpp  ISSBoxLifting.h  ISSBoxLiftingSimple.cpp  ISSBoxLiftingSimple.h  ISSBoxShelving.cpp  ISSBoxShelving.h  ISSMPBlending.cpp  ISSMPBlending.h  ISSPlanar3Link.cpp  ISSPlanar3Link.h  ISSPlanarInsert.cpp  ISSPlanarInsert.h  ISSQuanserQube.cpp  ISSQuanserQube.h  InitStateSetter.cpp  InitStateSetter.h
RcsPySim/src/cpp/core/observation/: OMBallPos.cpp  OMBallPos.h  OMBodyStateAngular.cpp  OMBodyStateAngular.h  OMBodyStateLinear.cpp  OMBodyStateLinear.h  OMCollisionCost.cpp  OMCollisionCost.h  OMCollisionCostPrediction.cpp  OMCollisionCostPrediction.h  OMCombined.cpp  OMCombined.h  OMComputedVelocity.cpp  OMComputedVelocity.h  OMDynamicalSystemDiscrepancy.cpp  OMDynamicalSystemDiscrepancy.h  OMDynamicalSystemGoalDistance.cpp  OMDynamicalSystemGoalDistance.h  OMForceTorque.cpp  OMForceTorque.h  OMGoalDistance.cpp  OMGoalDistance.h  OMJointState.cpp  OMJointState.h  OMManipulabilityIndex.cpp  OMManipulabilityIndex.h  OMNormalized.cpp  OMNormalized.h  OMPartial.cpp  OMPartial.h  OMTask.cpp  OMTask.h  OMTaskPositions.cpp  OMTaskPositions.h  OMTaskSpaceDiscrepancy.cpp  OMTaskSpaceDiscrepancy.h  ObservationModel.cpp  ObservationModel.h
RcsPySim/src/cpp/core/physics/: BodyParamInfo.cpp  BodyParamInfo.h  ForceDisturber.cpp  ForceDisturber.h  PPDBodyPosition.cpp  PPDBodyPosition.h  PPDBoxExtents.cpp  PPDBoxExtents.h  PPDCompound.cpp  PPDCompound.h  PPDMassProperties.cpp  PPDMassProperties.h  PPDMaterialProperties.cpp  PPDMaterialProperties.h  PPDRodLength.cpp  PPDRodLength.h  PPDSingleVar.h  PPDSphereRadius.cpp  PPDSphereRadius.h  PhysicsParameterDescriptor.cpp  PhysicsParameterDescriptor.h  PhysicsParameterManager.cpp  PhysicsParameterManager.h  vortex_log.cpp  vortex_log.h
RcsPySim/src/cpp/core/util/: BoxSpace.cpp  BoxSpace.h  BoxSpaceProvider.cpp  BoxSpaceProvider.h  eigen_matnd.h  integrator.cpp  integrator.h  nocopy.h  string_format.h
RcsPySim/src/cpp/hardware/: CMakeLists.txt  ECSRobo.cpp  PolicyComponent.cpp  PolicyComponent.h  TestBallTracking.cpp  TestBotSim.cpp
RcsPySim/src/cpp/hardware/PhysicsComponent/: CMakeLists.txt  PhysicsSimulationComponent.cpp  PhysicsSimulationComponent.h
RcsPySim/src/cpp/hardware/ViewerComponent/: CMakeLists.txt  ViewerComponent.cpp  ViewerComponent.h
remotelaunch/: remotelaunch_TEMPLATE.sh  slurm_launcher.sh  sync_to_host.sh
(+639 files in other folders)
